<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CommonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scalc_color_digits_background_full"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingBottom="5dp"
        android:text="@string/scalc_header_str"
        android:textColor="@color/scalc_color_header_str" />

    <LinearLayout
        android:id="@+id/ResultParentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/scalc_color_result_out_background"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/ResultChildLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/scalc_color_digits_background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/ic_launcher"
                android:text="@string/scalc_result_str"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MainPanelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/scalc_color_background"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scalc_clear_button_str"
            android:width="50dp" />

        <Button
            android:id="@+id/buttonOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scalc_off_button_str"
            android:width="50dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/KeyBoardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scalc_color_digits_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="25dp" >

        <LinearLayout
            android:id="@+id/BorderLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="7dp" >

            <LinearLayout
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100" >

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_7_button_str" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_8_button_str" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_9_button_str" />

                <Button
                    android:id="@+id/button_Div"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_operator_div_button_str" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100" >

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_4_button_str" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_5_button_str" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_6_button_str" />

                <Button
                    android:id="@+id/button_Mul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_operator_mul_button_str" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100" >

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_1_button_str" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_2_button_str" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_3_button_str" />

                <Button
                    android:id="@+id/button_Sub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_operator_sub_button_str" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100" >

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_digit_0_button_str" />

                <Button
                    android:id="@+id/button_Eql"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_operator_equal_button_str" />

                <Button
                    android:id="@+id/button_Dot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_float_point_button_str" />

                <Button
                    android:id="@+id/button_Add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/scalc_operator_add_button_str" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/svDebugLogger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/ll_debug_logger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_operand_one_logger_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scalc_logger_str_tv_operand_one" />

                    <TextView
                        android:id="@+id/tv_operand_one_logger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/scalc_logger_str_operand_one" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp" >

                    <TextView
                        android:id="@+id/scalc_logger_str_tv_operand_two_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scalc_logger_str_tv_operand_two" />

                    <TextView
                        android:id="@+id/tv_operand_two_logger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/scalc_logger_str_operand_two" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp" >

                    <TextView
                        android:id="@+id/scalc_logger_str_tv_result_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scalc_logger_str_tv_result" />

                    <TextView
                        android:id="@+id/tv_result_logger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/scalc_logger_str_result" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp" >

                    <TextView
                        android:id="@+id/scalc_logger_str_tv_stack_array_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scalc_logger_str_tv_stack_array" />

                    <TextView
                        android:id="@+id/tv_stack_sequence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/scalc_logger_str_stack_array" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>